# openqaoa

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  QCS_pyquil_test.ipynb  README.md  Workflows_example.ipynb  _version.py  codecov.yml  debug copy.txt  debug.txt  docker-compose.yml  hamiltonian_tutorial.ipynb  openqaoa_example.ipynb  openqaoa_example_vectorised.ipynb  pyproject.toml  pytest.ini  setup.py  test_backends_correctness.ipynb  testing_decompositions.ipynb  testing_variate_params.ipynb
src/openqaoa-azure/: README.md  backend_config.py  pyproject.toml  requirements.txt  setup.py
src/openqaoa-azure/backends/: __init__.py  devices.py
src/openqaoa-azure/openqaoa_azure/: __init__.py  _version.py  backend_config.py  utilities.py
src/openqaoa-azure/openqaoa_azure/backends/: __init__.py
src/openqaoa-azure/tests/: test_devices.py  test_devices_azure.py  test_qpu_qiskit.py  test_qpu_qiskit_azure.py
src/openqaoa-braket/: README.md  backend_config.py  pyproject.toml  requirements.txt  setup.py  utilities.py
src/openqaoa-braket/backends/: __init__.py  devices.py  gates_braket.py  qaoa_braket_qpu.py
src/openqaoa-braket/openqaoa_braket/: __init__.py  _version.py  backend_config.py
src/openqaoa-braket/openqaoa_braket/algorithms/: __init__.py
src/openqaoa-braket/openqaoa_braket/backends/: devices.py  gates_braket.py  qaoa_braket_qpu.py
src/openqaoa-braket/tests/: test_aws_managed_jobs.py  test_devices_braket.py  test_gate_applicators_braket.py  test_gates_braket.py  test_qpu_braket.py
src/openqaoa-core/: MANIFEST.in  OpenQAOA_idealvVSnoisyVSZNEmitigated.ipynb  README.md  Untitled.ipynb  __init__.py  caldata.json  maxcutqaoa_ideal.json  maxcutqaoa_mitigated.json  maxcutqaoa_noisy.json  pyproject.toml  requirements.txt  requirements_docs.txt  requirements_test.txt  run.py  setup.py  test-adriano.ipynb  test-marco-zne.py  test-marco.ipynb  test-marco.py  test.ipynb  utilities.py
src/openqaoa-core/Adriano_Results/: README.txt
src/openqaoa-core/algorithms/: __init__.py  baseworkflow.py  parameters.py  workflow_properties.py
src/openqaoa-core/algorithms/jobs/: managed_job.py
src/openqaoa-core/algorithms/qaoa/: __init__.py  qaoa_benchmark.py  qaoa_parameters.py  qaoa_result.py  qaoa_workflow.py
src/openqaoa-core/algorithms/rqaoa/: __init__.py  rqaoa_parameters.py  rqaoa_result.py  rqaoa_results.py  rqaoa_utils.py  rqaoa_workflow.py  rqaoa_workflow_properties.py
src/openqaoa-core/backends/: __init__.py  basebackend.py  cost_function.py  devices_core.py  gates_vectorized.py  plugin_finder.py  qaoa_analytical_sim.py  qaoa_backend.py  qaoa_device.py  qaoa_vectorized.py  wrapper.py
src/openqaoa-core/derivatives/: derivative_functions.py  qfim.py
src/openqaoa-core/openqaoa/: __init__.py  _version.py  utilities.py
src/openqaoa-core/openqaoa-core/: __init__.py
src/openqaoa-core/openqaoa-core/algorithms/: __init__.py  workflow_properties.py
src/openqaoa-core/openqaoa-core/backends/: __init__.py
src/openqaoa-core/openqaoa-core/optimizers/: __init__.py  training_vqa.py
src/openqaoa-core/openqaoa-core/problems/: converters.py
src/openqaoa-core/openqaoa/algorithms/: __init__.py  baseworkflow.py  workflow_properties.py
src/openqaoa-core/openqaoa/backends/: __init__.py  basebackend.py  basedevice.py  cost_function.py  devices_core.py  plugin_finder.py  qaoa_backend.py  qaoa_device.py  qaoa_vectorized.py  wrapper.py
src/openqaoa-core/optimizers/: __init__.py  logger_vqa.py  optimization_methods.py  qaoa_optimizer.py  result.py  training_vqa.py
src/openqaoa-core/problems/: __init__.py  binpacking.py  converters.py  helper_functions.py  knapsack.py  maximalindependentset.py  maximumcut.py  minimumvertexcover.py  numberpartition.py  portfoliooptimization.py  problem.py  qubo.py  shortestpath.py  tsp.py  vehiclerouting.py
src/openqaoa-core/qaoa_components/: __init__.py
src/openqaoa-core/rqaoa/: __init__.py  rqaoa.py  rqaoa_results.py
src/openqaoa-core/tests/: test_backends.py  test_benchmark.py  test_bin_packing.py  test_bpsp.py  test_converters.py  test_custom_mixer.py  test_derivative.py  test_devices.py  test_gate_applicators_vectorized.py  test_kcolor.py  test_knapsack.py  test_logger.py  test_maximum_cut.py  test_minimum_vertex_cover.py  test_mis.py  test_number_partition.py  test_operators.py  test_optimizers.py  test_optimizers_pennylane.py  test_parameters.py  test_parameters_plots.py  test_portfolio_optimization.py  test_problems.py  test_qubo.py  test_result_object.py  test_results.py  test_sample_from_wavefunction.py  test_shortest_path.py  test_simulators.py  test_sk.py  test_tsp.py  test_utilities.py  test_vectorized.py  test_vrp.py  test_workflows.py
src/openqaoa-pyquil/: README.md  backend_config.py  pyproject.toml  requirements.txt  setup.py
src/openqaoa-pyquil/backends/: __init__.py  devices.py  gates_pyquil.py  qaoa_pyquil_qpu.py  qaoa_pyquil_sim.py
src/openqaoa-pyquil/openqaoa_pyquil/: __init__.py  _version.py  backend_config.py  utilities.py
src/openqaoa-pyquil/tests/: test_backend_wrapper.py  test_circuit_routing.py  test_circuit_routing_pyquil.py  test_gate_applicators_pyquil.py  test_gates_pyquil.py  test_pyquil_backend_wrapper.py  test_pyquil_qvm.py  test_workflows_pyquil.py
src/openqaoa-qiskit/: README.md  backend_config.py  pyproject.toml  requirements.txt  setup.py  test_dump_rqaoa.json  utilities.py
src/openqaoa-qiskit/backends/: __init__.py  devices.py  gates_qiskit.py  qaoa_qiskit_base.py  qaoa_qiskit_qpu.py  qaoa_qiskit_sim.py
src/openqaoa-qiskit/openqaoa_qiskit/: __init__.py  backend_config.py  utilities.py
src/openqaoa-qiskit/tests/: test_backends.py  test_backends_qiskit.py  test_circuit_routing_qiskit.py  test_devices.py  test_devices_qiskit.py  test_gate_applicators_qiskit.py  test_gates_qiskit.py  test_qiskit_backend_wrapper.py  test_qpu_qiskit.py  test_result_object_qiskit.py  test_sample_from_wavefunction.py  test_sample_from_wavefunction_qiskit.py  test_workflows.py  test_workflows_qiskit.py
(+951 files in other folders)
