[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openqaoa-core"
version = "0.2.5"
authors = [{ name = "Entropica Labs" }]
description = "OpenQAOA is a python open-source multi-backend Software Development Kit to create, customise and execute the Quantum Approximate Optimisation Algorithm (QAOA) on Noisy Intermediate-Scale Quantum (NISQ) devices, and simulators"
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/entropicalabs/openqaoa" }
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
keywords = ["quantum", "optimisation", "SDK"]

dependencies = [
    "pandas>=2.0",
    "sympy>=1.12",
    "numpy>=1.23",
    "networkx>=2.8",
    "matplotlib>=3.6",
    "scipy>=1.10",
    "docplex==2.25.236",
    "autograd>=1.6",
    "semantic_version>=2.10",
    "autoray>=0.6",
    "requests",
    "ipython>=8.19"
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.5.0",
    "sphinx-autodoc-typehints>=1.18.1",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.9",
    "ipython>=8.10.0",
    "nbconvert>=6.5.1",
    "myst_parser>=2.0.0"
]
tests = [
    "pytest>=7.1.0",
    "pytest-xdist",
    "pytest-cov>=3.0.0",
    "nbconvert>=6.5.1",
    "pandas>=1.4.3",
    "plotly>=5.9.0",
    "cplex>=22.1.0.0"
]
all = [
    "openqaoa-core[docs,tests]"
]
