[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openqaoa-pyquil"
version = "0.2.5"
authors = [{ name = "Entropica Labs" }]
description = "Pyquil Plug-in for OpenQAOA"
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/entropicalabs/openqaoa" }
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["quantum", "optimisation", "SDK"]

dependencies = [
    "openqaoa-core==0.2.5",
    "pyquil>=3.1.0,<4.0.0"
]
