[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openqaoa-qiskit"
version = "0.2.5"
authors = [{ name = "Entropica Labs" }]
description = "Qiskit Plug-in for OpenQAOA"
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/entropicalabs/openqaoa" }
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
keywords = ["quantum", "optimisation", "SDK"]

dependencies = [
    "openqaoa-core==0.2.5",
    "qiskit>=0.36.1,<1.0",
    "qiskit-ibm-provider",
    "qiskit-aer"
]

[project.entry-points."openqaoa.plugins"]
qiskit = "openqaoa_qiskit.backend_config"
